[package]
name = "rlox"
version = "0.1.0"
authors = ["Jorge Luis Pérez <jolisper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-trace-execution = []
default = ["debug-trace-execution"]

[dependencies]

